--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.484.0",
     "multer": "^1.4.5-lts.2",
-    "next": "15.2.4",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "octokit": "^4.1.4",
     "openai": "^4.104.0",
